# opendaq-graph-gui

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  component_cache.cpp  main.cpp  nodes.cpp  nodes.h  opendaq_control.cpp  opendaq_control.h  properties_window.cpp  properties_window.h  property_cache.cpp  property_cache.h  signal.cpp  signal.h  signals_window.cpp  signals_window.h  utils.h
.github/workflows/: build.yml
patches/: imgui-32bit-vertices.patch  imgui_notify_top_center.patch  implot-locked-axis.patch  opendaq-cpptrace.patch
src/: component_cache.cpp  component_cache.h  main.cpp  nodes.cpp  nodes.h  opendaq_control.cpp  opendaq_control.h  properties_window.cpp  properties_window.h  signal.cpp  signal.h  signals_window.cpp  signals_window.h  tree_view_window.cpp  tree_view_window.h  utils.h
